--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -77,7 +77,6 @@ nav {
 .right-side {
   .pull-right;
 }
-
 @media (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
   .GridForside {
     // Double columns must span 100% in tablet view (but not the full-width template - hence this hack.)
@@ -255,4 +254,78 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
+}
+
+// Social icon styling
+
+.icon-facebook {
+  &:hover {
+    background-color: #3e5a98;
+  }
+}
+
+.icon-futurity {
+  &:hover {
+    background-color: #f7ba20;
+  }
+}
+
+.icon-instagram {
+  &:hover {
+    background-color: #3e5a98;
+  }
+}
+
+.icon-twitter {
+  &:hover {
+    background-color: #2ca8df;
+  }
+}
+
+.icon-rss {
+  &:hover {
+    background-color: #f7941e;
+  }
+}
+
+.icon-linkedin {
+  &:hover {
+    background-color: #0078b6;
+  }
+}
+
+.icon-coursera {
+  &:hover {
+    background-color: #408bc9;
+  }
+}
+
+.icon-video {
+  &:hover {
+    background-color: #439639;
+  }
+}
+
+.icon-conversation {
+  &:hover {
+    background-color: #d7352a;
+  }
+}
+
+.icon-vimeo {
+  &:hover {
+    background-color: #d12223;
+  }
+}
+
+.icon-youtube {
+  &:hover {
+    background-color: #d12223;
+  }
+}
+
+.icon-phone {
+  &:hover {
+    background-color: @ku-red;
+  }
 }
