--- a/less/variables.less
+++ b/less/variables.less
@@ -22,6 +22,7 @@
 @gray-f5:                #f5f5f5;
 @white-color:            #fff;
 
+@ku-light-grey:          #606060;
 @ku-search-icons:        #9d9d9d;
 @ku-news-gray:           #4a4949;
 @ku-footer-icon-bg:      #757575;
@@ -34,7 +35,7 @@
 @ku-red:                #901a1e;
 @ku-red-hover:          #7b161a;
 @ku-jumpboard:          #921819;
-@ku-jumpboard-links:    #606060;
+@ku-jumpboard-links:    @ku-light-grey;
 @ku-jumpboard-list-bg:  @semi-white;
 @hum:                   #365aa5;
 @hum-hover:             #304f91;
@@ -57,14 +58,14 @@
 @gridbox4: 81px; // .size4
 @gridbox5: 55px; // .size5
 // KU colors
-@ku-gridbox-text: #606060;
+@ku-gridbox-text: @ku-light-grey;
 @brown: #625757;
 @brown-hover: #4d4444;
 @blue: #a1c5c8;
 @blue-hover: #7ea5a8;
 @green: #85ae33;
 @green-hover: #75992c;
-@ku-gray: #eee;
+@ku-gray: @gray-lighter;
 @ku-gray-hover: #e7e7e7;
 @ku-darkgray: #b5b5b5;
 @ku-darkgray-hover: #a1a1a1;
