--- a/less/tables.less
+++ b/less/tables.less
@@ -17,6 +17,11 @@ th {
   text-align: left;
 }
 
+// KU medarbejderlister
+#medarbejdertable_wrapper table tfoot {
+  display: table-header-group;
+}
+
 // Baseline styles
 
 .table {
