--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -24,8 +24,8 @@
   max-width: none !important;
   /*border-collapse: separate !important;*/
 }
-.table>tbody>tr:hover {
-    background-color: @gray-f5;
+.dataTable>tbody>tr:hover {
+  background-color: #f5f5f5;
 }
 
 .dataTable td, .dataTable th {
