--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -30,7 +30,7 @@
 // The dropdown menu (ul)
 .dropdown-menu {
   position: absolute;
-  top: calc(100% + 1px); //100%
+  top: 100%;
   left: 0;
   z-index: @zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
