--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1683,11 +1683,19 @@
   &:before {
     content: @icon-facebook;
   }
+
+  &:hover {
+    background-color: #3e5a98;
+  }
 }
 
 .icon-futurity {
   &:before {
     content: @icon-futurity;
+  }
+
+  &:hover {
+    background-color: #f7ba20;
   }
 }
 
@@ -1695,11 +1703,19 @@
   &:before {
     content: @icon-instagram;
   }
+
+  &:hover {
+    background-color: #3e5a98;
+  }
 }
 
 .icon-twitter {
   &:before {
     content: @icon-twitter;
+  }
+
+  &:hover {
+    background-color: #2ca8df;
   }
 }
 
@@ -1707,11 +1723,19 @@
   &:before {
     content: @icon-rss;
   }
+
+  &:hover {
+    background-color: #f7941e;
+  }
 }
 
 .icon-linkedin {
   &:before {
     content: @icon-linkedin;
+  }
+
+  &:hover {
+    background-color: #0078b6;
   }
 }
 
@@ -1719,11 +1743,19 @@
   &:before {
     content: @icon-coursera;
   }
+
+  &:hover {
+    background-color: #408bc9;
+  }
 }
 
 .icon-video {
   &:before {
     content: @icon-video;
+  }
+
+  &:hover {
+    background-color: #439639;
   }
 }
 
@@ -1731,11 +1763,19 @@
   &:before {
     content: @icon-conversation;
   }
+
+  &:hover {
+    background-color: #d7352a;
+  }
 }
 
 .icon-vimeo {
   &:before {
     content: @icon-vimeo;
+  }
+
+  &:hover {
+    background-color: #d12223;
   }
 }
 
@@ -1743,11 +1783,19 @@
   &:before {
     content: @icon-youtube;
   }
+
+  &:hover {
+    background-color: #d12223;
+  }
 }
 
 .icon-phone {
   &:before {
     content: @icon-phone;
+  }
+
+  &:hover {
+    background-color: @ku-red;
   }
 }
 
