--- a/less/tables.less
+++ b/less/tables.less
@@ -74,6 +74,39 @@ th {
   }
 }
 
+// KU table columns widths
+
+.pct_10 {
+  width: 10%;
+}
+
+.pct_15 {
+  width: 15%;
+}
+
+.pct_20 {
+  width: 20%;
+}
+
+.pct_25 {
+  width: 25%;
+}
+
+.pct_30 {
+  width: 30%;
+}
+
+.pct_35 {
+  width: 35%;
+}
+
+.pct_40 {
+  width: 40%;
+}
+
+.pct_45 {
+  width: 45%;
+}
 
 // Condensed table w/ half padding
 
