--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -63,37 +63,37 @@
           <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
           <div class="social-items">
             <div class="social-item">
-              <a target="_blank" href="https://www.facebook.com/universitet" class="icon icon-facebook" title="Facebook"></a>
+              <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon icon-facebook" title="Facebook"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="icon icon-linkedin" title="LinkedIn"></a>
+              <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon icon-linkedin" title="LinkedIn"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="icon icon-instagram" title="Instagram"></a>
+              <a target="_blank" href="https://www.instagram.com/university_of_copenhagen/" class="social-icon icon-instagram" title="Instagram"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="icon icon-twitter" title="Twitter"></a>
+              <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon icon-twitter" title="Twitter"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://velkommen.ku.dk/apps" class="icon icon-phone" title="KU Apps"></a>
+              <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon icon-phone" title="KU Apps"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://nyheder.ku.dk/rss/" class="icon icon-rss" title="RSS"></a>
+              <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon icon-rss" title="RSS"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="icon icon-youtube" title="YouTube"></a>
+              <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon icon-youtube" title="YouTube"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="icon icon-futurity" title="futurity"></a>
+              <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon icon-futurity" title="futurity"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="icon icon-conversation" title="The Conversation"></a>
+              <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon icon-conversation" title="The Conversation"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="https://www.coursera.org/ucph" class="icon icon-coursera" title="Coursera"></a>
+              <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon icon-coursera" title="Coursera"></a>
             </div>
             <div class="social-item">
-              <a target="_blank" href="http://video.ku.dk" class="icon icon-video" title="KU Videoportal"></a>
+              <a target="_blank" href="http://video.ku.dk" class="social-icon icon-video" title="KU Videoportal"></a>
             </div>
           </div>
         </div>
