--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -29,6 +29,9 @@
 <!-- Kurser.ku.dk -->
 <link href="{{ site.baseurl }}/assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
 {% endif %}
+{% if page.category == "gridbox" %}
+<link href="{{ site.baseurl }}/dist/css/faculties/faelles.css" rel="stylesheet">
+{% endif %}
 {% else %}
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
@@ -50,6 +53,9 @@
 {% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
 <link href="../../assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
+{% endif %}
+{% if page.category == "gridbox" %}
+<link href="{{ site.baseurl }}../../dist/css/faculties/faelles.css" rel="stylesheet">
 {% endif %}
 <link href="../../assets/css/print/print.css" media="print" rel="stylesheet">
 {% endif %}
