--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -445,7 +445,8 @@
     &.with-img {
       .box2 {
         img {
-          object-fit: cover;
+          max-height: 100%;
+          max-width: none;
         }
       }
     }
