--- a/less/panels.less
+++ b/less/panels.less
@@ -352,6 +352,7 @@
       a {
         display: block;
         padding: 8px 0 10px 10px;
+        outline: none;
 
         &:before {
           .glyphicon;
