--- a/less/forms.less
+++ b/less/forms.less
@@ -7,6 +7,10 @@
 //
 // Restyle and baseline non-control form elements.
 
+// KU mandatory:
+.mandatory {
+  color: @brand-danger;
+}
 fieldset {
   padding: 0;
   margin: 0;
