--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -5,10 +5,10 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: @zindex-navbar-fixed !important;
+    z-index: @zindex-tooltip!important;
     padding: @padding20;
     color: @white-color;
-    background: fade(lighten(@gray-light, 18%), 90%);
+    background: fade(lighten(@gray-light, 18%), 70%);
 
     .h2 {
       font-weight: 700;
