--- a/docs/_includes/ku-privacypolicy.html
+++ b/docs/_includes/ku-privacypolicy.html
@@ -1,4 +1,4 @@
-<div class="container-fluid privacy-policy">
+<div class="container-fluid privacy-policy" style="display:none">
   <div class="container">
     <div class="row">
       <div class="col-xs-8">
