--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -16,6 +16,7 @@
     width: 61px;
     z-index: 10;
     position: relative;
+    left: 3px;
     bottom: -5px;
     @media (max-width: @screen-sm-min) {
       width: 50px;
@@ -28,9 +29,12 @@
     max-height: @ku-branding-box-height;
     position: absolute;
     left: 83px;
-    bottom: 18px;
+    bottom: 16px;
     letter-spacing: 0.936px;
     padding-right: 10px;
+    a {
+      text-decoration: none;
+    }
 
     .ku-branding-text-major {
       font-size: 1.1em;
