--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -2,7 +2,7 @@
 // KU left menu
 // --------------------------------------------------
   .ku-leftmenu {
-    padding-top: @grid-gutter-height;
+    padding-top: 30px;
     line-height: 1.333333;
     .ku-navbar-header {
       font-weight: bold;
