Updated slider to latest version

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -260,9 +260,8 @@
       img {
         // Img inside the box adjusted by height and centered
         display: block;
-        // width: auto;
         min-height: calc(100% + 1px);
-        object-fit: fill;
+        object-fit: cover;
         -ms-interpolation-mode: bicubic;
         position: absolute;
         top: 50%;
