--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -44,7 +44,7 @@
     <h2 id="thumbnails-custom-html5-content">Custom content using HTML5 figure tags</h2>
     <p>With HTML5's figure tag, you can easily control content and captions.</p>
     <div class="bs-example" data-example-id="img-with-captions">
-      <figure class="figure">
+      <figure class="image">
         <img src="https://placehold.it/800x200" class="figure-img" alt="A generic square placeholder image in a figure.">
         <figcaption class="figure-caption">A caption for the above image.</figcaption>
       </figure>
