--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -50,7 +50,7 @@
       </figure>
     </div>
     {% highlight html %}
-    <figure class="figure">
+    <figure class="image">
       <img src="..." class="figure-img" alt="">
       <figcaption class="figure-caption">A caption for the above image.</figcaption>
     </figure>
