--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -8,21 +8,24 @@
   vertical-align: middle;
 }
 
+.ms-parent.form-control {
+  padding: 0;
+}
+
 .ms-choice {
   display: block;
   width: 100%;
-  height: 34px;
+  height: 100%;
   padding: 0;
   overflow: hidden;
   cursor: pointer;
-  border: 1px solid #ccc;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  border: none;
+  box-shadow: none;
   text-align: left;
   white-space: nowrap;
-  line-height: 34px;
-  color: #555;
+  line-height: 30px;
+  color: #252525;
   text-decoration: none;
-  border-radius: 2px;
   background-color: #fff;
 }
 
@@ -57,7 +60,7 @@
   top: 0;
   right: 0;
   width: 20px;
-  height: 25px;
+  height: 100%;
 }
 
 .ms-choice>div::before {
@@ -89,7 +92,7 @@
   position: absolute;
   z-index: 1000;
   background: #fff;
-  color: #000;
+  color: #252525;
   border: 1px solid #aaa;
   border-radius: 4px;
 }
@@ -127,15 +130,6 @@
   border: 1px solid #aaa;
   border-radius: 0;
   box-shadow: none;
-  /*
-  background: #fff url('../docs/images/multiple-select.png') no-repeat 100% -22px;
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left top, left bottom, color-stop(85%, #ffffff), color-stop(99%, #eeeeee));
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left top, left bottom, color-stop(85%, #ffffff), color-stop(99%, #eeeeee));
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, -webkit-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-  background: url('../docs/images/multiple-select.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);*/
 }
 
 .ms-search, .ms-search input {
