--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -30,6 +30,12 @@
   background-color: #fff;
 }
 
+@media (max-width: 767px) {
+  .ms-choice {
+    height: 34px;
+  }
+}
+
 .ms-choice.disabled {
   background-color: #f4f4f4;
   background-image: none;
@@ -39,7 +45,7 @@
 
 .ms-choice>span {
   position: absolute;
-  height: 100%;
+  height: 32px;
   top: 0;
   left: 0;
   right: 20px;
