--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -6,8 +6,8 @@
     <div class="container">
       <div class="row footercontent" role="menubar">
         <div class="col-xs-3 footercolumn">
-          <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
-          <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
+          <h3 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h3>
+          <h3 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h3>
           <ul class="footerlinks" role="menu">
             <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
             <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
