--- a/less/variables.less
+++ b/less/variables.less
@@ -323,7 +323,7 @@
 //** Text color for `<input>`s
 @input-color:                    @gray-dark;
 //** `<input>` border color
-@input-border:                   #999;
+@input-border:                   @gray;
 
 // TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
