--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -19,7 +19,7 @@
           <li><a href="../ku-newsboxes/">Template with news boxes</a></li>
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
-          <li><a href="../non-responsive/">Non responsive page</a></li>
+          <li><a href="../ku-non-responsive/">Non responsive page</a></li>
           <li><a href="#">Link 2.1</a>
             <ul>
               <li><a href="../ku-courses/">Kurser.ku.dk</a>
