--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -325,7 +325,7 @@
         .social-item {
           margin: 7px 16px 0 0;
 
-          .icon {
+          .social-icon {
             font-size: 32px;
             width: 35px;
             height: 35px;
