--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -6,6 +6,7 @@
     line-height: 1.333333;
     .ku-navbar-header {
       font-weight: bold;
+      line-height: 1;
       margin-bottom: @grid-gutter-width;
       padding-left: 6px;
       border-left: 8px solid @ku-red;
