--- a/less/tables.less
+++ b/less/tables.less
@@ -10,7 +10,7 @@ table {
   // KU:
   @media (max-width: @screen-sm-min) {
     html:not(.non-responsive) & {
-      font-size: @font-size-large;
+      font-size: @font-size-base;
     }
   }
 }
