--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -136,10 +136,25 @@
 <script>
   // Only use under development - set active left menu item
   $(function() {
+
+    // Without Affix plugin - only for Docs
+    var $sidebar = $('.bs-docs-container #leftmenu'),
+      $window = jQuery(window),
+      offset = $sidebar.offset();
+    $window.scroll(function() {
+      if ($sidebar) {
+        if ($window.scrollTop() > offset.top) {
+          $sidebar.addClass('fixed');
+        } else {
+          $sidebar.removeClass('fixed');
+        }
+      }
+    });
+
     setActiveLinks();
 
     $('.nav li a').click(function() {
-    $('.nav li').removeClass('active');
+      $('.nav li').removeClass('active');
       $(this).parent().addClass('active');
     });
 
