--- a/less/mixins/panels.less
+++ b/less/mixins/panels.less
@@ -8,6 +8,11 @@
     background-color: @heading-bg-color;
     border-color: @heading-border;
 
+    // KU:
+    + .panel-body {
+      padding: 10px 0 0;
+    }
+
     + .panel-collapse > .panel-body {
       border-top-color: @border;
     }
