--- a/less/variables.less
+++ b/less/variables.less
@@ -852,7 +852,7 @@
 @panel-heading-padding:       6px 10px;
 // KU specific
 @panel-bokstop-heading-padding: 6px 0;
-@panel-footer-padding:        @panel-heading-padding;
+@panel-footer-padding:        6px 0;
 @panel-border-radius:         @border-radius-base;
 
 //** Border color for elements within panels
