--- a/less/panels.less
+++ b/less/panels.less
@@ -51,6 +51,8 @@
   padding: @panel-footer-padding;
   background-color: @panel-footer-bg;
   border-top: 1px solid @panel-inner-border;
+  // KU:
+  border-bottom: 1px solid @panel-inner-border;
   //.border-bottom-radius((@panel-border-radius - 1));
 }
 // List groups in panels
