--- a/docs/_includes/components/glyphicons.html
+++ b/docs/_includes/components/glyphicons.html
@@ -134,6 +134,9 @@
     <li>
       <span class="icon icon-padlock" aria-hidden="true"></span>
     </li>
+    <li>
+      <span class="icon icon-arrow" aria-hidden="true"></span>
+    </li>
   </ul>
 </div>
 {% highlight html %}
@@ -176,6 +179,9 @@
   </li>
   <li>
     <span class="icon icon-padlock" aria-hidden="true"></span>
+  </li>
+  <li>
+    <span class="icon icon-arrow" aria-hidden="true"></span>
   </li>
 </ul>
 {% endhighlight %}
