--- a/less/variables.less
+++ b/less/variables.less
@@ -323,7 +323,7 @@
 //** Text color for `<input>`s
 @input-color:                    @gray-dark;
 //** `<input>` border color
-@input-border:                   @gray;
+@input-border:                   #bbb;
 
 // TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
@@ -667,7 +667,7 @@
 //** Tooltip text color
 @tooltip-color:               @white-color;
 //** Tooltip background color
-@tooltip-bg:                  #000;
+@tooltip-bg:                  #666;
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
