--- a/docs/_includes/components/advanced-lists.html
+++ b/docs/_includes/components/advanced-lists.html
@@ -14,6 +14,7 @@
         <a href="#" class="advanced-link">
           <div class="list-content">
             <h4 class="list-header">List item with link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget. Vivamus sed mi at nunc condimentum placerat. Aenean eget gravida
+            sem. Vestibulum mollis eros non fermentum rhoncus. Aenean eget gravida
             sem. Vestibulum mollis eros non fermentum rhoncus.
           </div>
           <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=Img:+250+x+110')"></div>
@@ -55,6 +56,7 @@
         <a href="#" class="advanced-link">
           <div class="list-content">
             <h4 class="list-header">List item with link</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat augue diam, id ornare neque mollis eu. Vivamus semper diam urna, in maximus felis sollicitudin eget. Vivamus sed mi at nunc condimentum placerat. Aenean eget gravida
+            sem. Vestibulum mollis eros non fermentum rhoncus. Aenean eget gravida
             sem. Vestibulum mollis eros non fermentum rhoncus.
           </div>
           <div class="list-img" style="background-image: url('https://placehold.it/250x110?text=Img:+250+x+110')"></div>
