--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -1,7 +1,7 @@
 /**
  * @author zhixin wen: https://github.com/wenzhixin/multiple-select
  */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin-ext');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin-ext');*/
 .ms-parent {
   display: inline-block;
   position: relative;
